--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "node-telegram-bot-api": "^0.64.0",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
