--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-PORT = 5000
-DB_NAME = innosphere
-DB_USER = postgres
-DB_PASSWORD = postgres
-DB_HOST = localhost
-DB_PORT = 5432
-
 # PORT = 5000
 # DB_NAME = innosphere
-# DB_USER = inno
-# DB_PASSWORD = e5xCzMaYgfhW9CYpYxmxwHIWC7Ez2lOV
-# DB_HOST = dpg-cmilm47qd2ns7384iml0-a.oregon-postgres.render.com
+# DB_USER = postgres
+# DB_PASSWORD = postgres
+# DB_HOST = localhost
 # DB_PORT = 5432
+
+PORT = 5000
+DB_NAME = innosphere
+DB_USER = inno
+DB_PASSWORD = e5xCzMaYgfhW9CYpYxmxwHIWC7Ez2lOV
+DB_HOST = dpg-cmilm47qd2ns7384iml0-a.oregon-postgres.render.com
+DB_PORT = 5432
