--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@
 # DB_PORT = 5432
 
 PORT = 5000
-DB_NAME = innosphere
+DB_NAME = innosphere_ov7v
 DB_USER = inno
-DB_PASSWORD = e5xCzMaYgfhW9CYpYxmxwHIWC7Ez2lOV
-DB_HOST = dpg-cmilm47qd2ns7384iml0-a.oregon-postgres.render.com
+DB_PASSWORD = iYIMuysOjED4BG1GA0kHk3ZpLGCeB52B
+DB_HOST = dpg-cnad88acn0vc73901h2g-a.oregon-postgres.render.com
 DB_PORT = 5432
