--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-# PORT = 5000
-# DB_NAME = innosphere
-# DB_USER = postgres
-# DB_PASSWORD = postgres
-# DB_HOST = localhost
-# DB_PORT = 5432
-
 PORT = 5000
-DB_NAME = innosphere_ov7v
-DB_USER = inno
-DB_PASSWORD = iYIMuysOjED4BG1GA0kHk3ZpLGCeB52B
-DB_HOST = dpg-cnad88acn0vc73901h2g-a.oregon-postgres.render.com
+DB_NAME = innosphere
+DB_USER = postgres
+DB_PASSWORD = postgres
+DB_HOST = localhost
 DB_PORT = 5432
+
+# PORT = 5000
+# DB_NAME = innosphere_ov7v
+# DB_USER = inno
+# DB_PASSWORD = iYIMuysOjED4BG1GA0kHk3ZpLGCeB52B
+# DB_HOST = dpg-cnad88acn0vc73901h2g-a.oregon-postgres.render.com
+# DB_PORT = 5432
